Fix visibility of the sequra product radio on checkout when only sequra payment method is available

--- a/sequra/assets/css/scss/checkout.scss
+++ b/sequra/assets/css/scss/checkout.scss
@@ -57,6 +57,9 @@
     &__name {
         font-weight: 700;
     }
+    &__input{
+        display: inline-block!important;
+    }
 }
 .sequra-block__description {
     margin-bottom: 1em;
